Fix: support for Java8